--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mariadb://localhost/tfinal
 spring.datasource.username=root
 spring.datasource.password=fundatec
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/api
